tests/ui/rfcs/rfc-2126-extern-absolute-paths/non-existent-2.rs
//@ edition:2018

fn main() {
    let s = ::xcrate::S;
    //~^ ERROR failed to resolve: could not find `xcrate` in the list of imported crates
}
